[package]
name = "peaq-pay"
version = "0.0.1"
edition = "2021"
description = 'A package for processing payments and settlements on peaq network. Also works with any substrate based network that implements multisog pallets.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-pay/'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	".",
]

[dependencies]
hex = "0.4.3"
log = "0.4.16"
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", rev = '7c6342047c992b6f3fa917d0d0448eb7e89afa6c', package = "sp-keyring" }
#frame-metadata = { version = "14.0.0", git = "https://github.com/paritytech/frame-metadata.git", tag = "v14.0.0", features = ["v14"] }

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c6342047c992b6f3fa917d0d0448eb7e89afa6c'
version = '5.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c6342047c992b6f3fa917d0d0448eb7e89afa6c'
version = '5.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.substrate-api-client] 
version = "0.6.0"
path = "../substrate-api-client"
# git = "https://github.com/irediaes/substrate-api-client.git"
# rev = "b1bf3fd70a7443518edc4fd13395935fa7272047"



[features]
default = ["std"]
std = [
     'sp-runtime/std',
     'sp-core/std',
     'substrate-api-client/std',
]